fix: solved products horizontal scroll

--- a/src/components/BackBtn/styles.css
+++ b/src/components/BackBtn/styles.css
@@ -2,8 +2,8 @@
   display: flex;
   cursor: pointer;
   position: absolute;
-  left: 6%;
-  top: 55%;
+  left: 13%;
+  top: 60%;
   transition: 0.2s;
   border-radius: 50%;
   width: 70px;
