--- a/src/components/ForwardBtn/styles.css
+++ b/src/components/ForwardBtn/styles.css
@@ -2,7 +2,7 @@
   display: flex;
   cursor: pointer;
   position: absolute;
-  right: 6%;
+  right: 13%;
   top: 60%;
   transition: 0.2s;
   border-radius: 50%;
