--- a/src/components/ItemListContainer/styles.css
+++ b/src/components/ItemListContainer/styles.css
@@ -7,7 +7,6 @@
 .products__container--items {
    display: flex;
    width: 100dvw;
-   justify-content: center;
    gap: 3rem;
    margin-top: 17rem;
    scroll-behavior: smooth;
@@ -15,6 +14,6 @@
 }
 
 .products__container--items.has-buttons {
-   width: 80dvw;
+   width: 1100px;
    overflow-x: hidden;
 }
